<resources>
    <string name="app_name">CountDownList</string>

    <!-- 通用操作 -->
    <string name="action_start">开始</string>
    <string name="action_restart">重新开始</string>
    <string name="action_pause">暂停</string>
    <string name="action_resume">继续</string>
    <string name="action_goon">继续</string>
    <string name="action_cancel">取消</string>
    <string name="action_finsh">结束</string>
    <string name="action_reset">重置</string>
    <string name="action_add">添加</string>

    <!-- 状态 -->
    <string name="status_idle">就绪</string>
    <string name="status_running">运行中</string>
    <string name="status_paused">已暂停</string>
    <string name="status_finished">时间结束</string>
    <string name="status_warning">即将结束</string>
    <string name="timer_finished">时间结束</string>

    <!-- 页面标题 -->
    <string name="title_timer_user">Timer 实现 倒计时</string>
    <string name="title_hanlder_user">Handler 实现 倒计时</string>
    <string name="title_countdown_user">CountDownTimer 实现 倒计时</string>
    <string name="title_valueAnimatior_user">ValueAnimator 动画 实现 倒计时</string>
    <string name="title_rxjava_user">RxJava 实现 倒计时</string>
    <string name="title_chronometer_user">Chronometer 实现 倒计时</string>
    <string name="title_alarm_user">倒计时结束时发送通知</string>
    <string name="title_list_view_countdown">ListView 列表样式的倒计时</string>
    <string name="title_recyclerView_countdown">RecyclerView 列表样式的倒计时</string>
    <string name="title_countTime_custom">自定义 CountDownTimer</string>

    <!-- 短信倒计时 -->
    <string name="title_sms_hanlderUtil">短信倒计时 HandlerUtil 工具类 实现</string>
    <string name="title_sms_rxjava">短信倒计时 RxJava 实现</string>
    <string name="title_sms_rxbinding">短信倒计时 RxBinding 实现</string>
    <string name="title_sms_kotiln">短信倒计时 Kotlin 实现</string>
    <string name="title_sms_countDownButton">短信倒计时 自定义button 实现</string>
    <string name="sms_send_code">发送验证码</string>

    <!-- Compose Tab -->
    <string name="tab_countdown">倒计时</string>
    <string name="tab_stopwatch">秒表</string>
    <string name="tab_list">列表</string>
    <string name="tab_target">目标</string>
    <string name="tab_more">更多</string>

    <!-- 主页分类 -->
    <string name="category_basic">基础倒计时实现</string>
    <string name="category_list">列表倒计时</string>
    <string name="category_sms">短信验证码倒计时</string>
    <string name="category_coroutine">协程 + XML</string>
    <string name="category_compose">Compose UI</string>
</resources>
